trying on mac instead

--- a/8_counties.Rmd
+++ b/8_counties.Rmd
@@ -491,4 +491,78 @@ regression_2 <-   lm(county_crime$days_to_approval ~ 1 + county_crime$median_inc
 
 summary(regression_2)
 ```
+```{r}
+# Adding in jobs created because I'm dumb
+
+ppp_150 <- read_csv("raw_data/sba/PPP_SBA_150.csv") %>%
+  clean_names() %>%
+  select(zip, date_approved, lender, address, city, state, jobs_reported) %>%
+  drop_na(zip, jobs_reported) %>%
+  
+  # This calculates the date on which loans were approved vs. when apps opened.
+  mutate(date_approved = mdy(date_approved), 
+         days_to_approval = date_approved - mdy("04/03/2020"),
+         zip = as.character(zip), 
+         lender = tolower(lender))
+
+sba_cleaning <- function(file) {
+  x <- read_csv(file) %>%
+    clean_names() %>%
+    select(loan_amount, zip, date_approved, lender, city, state, jobs_reported) %>%
+    drop_na(zip) %>%
+    mutate(date_approved = mdy(date_approved), 
+         days_to_approval = date_approved - mdy("04/03/2020"),
+         zip = as.character(zip),
+         lender = tolower(lender))
+}
+
+# run for Mac
+file.names1 <- dir(path = "/Users/Regular/Desktop/GOV50/pppdata/raw_data/sba/states/", pattern = ".csv")
+
+# run for Windows
+file.names2 <- dir(path = "C:/Justin/Gov50/pppdata/raw_data/sba/states/", pattern = ".csv")
+
+all_states<- tibble()
+
+for(i in 1:length(file.names2)) {
+  file <- sba_cleaning(paste("raw_data/sba/states/",file.names2[i], sep = ""))
+  all_states <- rbind(all_states, file)
+}
+
+all_states2 <- all_states %>%
+  mutate(address = NA)
+
+ppp_150_newcol <- ppp_150 %>%
+  mutate(loan_amount = NA) %>%
+  mutate(loan_amount = as.character(loan_amount))
+
+ppp_total <- rbind(ppp_150_newcol, all_states2) %>%
+  mutate(days_to_approval = as.double(days_to_approval))
+```
+
+
+```{r}
+# Let's try joining
+
+# First let's clean this up by doing lender matching
+
+county_jobs <- left_join(county_crime, jobs_matched, by = c("zip", "date_approved", "lender",
+                                                         "address"))
+
+# Don't have to run this again if you don't need
+bank_ppp_policy_manual <- read_excel('raw_data/bank_ppp_policy_manual.xlsx', sheet = "Sheet2") %>%
+  mutate(sba_name = tolower(sba_name)) %>%
+  mutate(sba_name = str_trim(sba_name, side = "both")) %>%
+  drop_na(preference, requirement)
+
+jobs_matched <- left_join(ppp_total, bank_ppp_policy_manual,
+                                      by = c("lender" = "sba_name")) %>%
+  mutate(requirement = ifelse(str_detect(lender, pattern = "\\sfcu$"), 1, requirement),
+         requirement = ifelse(str_detect(lender, pattern = "\\scu$"), 1, requirement),
+         requirement = ifelse(str_detect(lender, pattern = "credit union"), 1, requirement)) %>%
+  drop_na(requirement) %>%
+  mutate(preference = replace_na(preference, 0)) %>%
+  select(-preference, -requirement)
+
+```
 
