--- a/1_zip_data_cleaning.Rmd
+++ b/1_zip_data_cleaning.Rmd
@@ -27,8 +27,9 @@ acs_income <- read_csv("raw_data/acs_income/ACSST5Y2018.S1903_data_with_overlays
 ```{r}
 ppp_150 <- read_csv("raw_data/sba/PPP_SBA_150.csv") %>%
   clean_names() %>%
-  select(loan_range, zip, date_approved, lender, address, city, state) %>%
-  drop_na(zip) %>%
+  select(loan_range, zip, date_approved, lender, address, city, state,
+         jobs_reported) %>%
+  drop_na(zip, jobs_reported) %>%
   
   # This calculates the date on which loans were approved vs. when apps opened.
   mutate(date_approved = mdy(date_approved), 
@@ -169,8 +170,9 @@ summary(test2)
 sba_cleaning <- function(file) {
   x <- read_csv(file) %>%
     clean_names() %>%
-    select(loan_amount, zip, date_approved, lender, city, state) %>%
-    drop_na(zip) %>%
+    select(loan_amount, zip, date_approved, lender, city, state,
+           jobs_reported) %>%
+    drop_na(zip, jobs_reported) %>%
     mutate(date_approved = mdy(date_approved), 
          days_to_approval = date_approved - mdy("04/03/2020"),
          zip = as.character(zip))
@@ -190,8 +192,8 @@ file.names2 <- dir(path = "C:/Justin/Gov50/pppdata/raw_data/sba/states/", patter
 ```{r}
 all_states<- tibble()
 
-for(i in 1:length(file.names1)) {
-  file <- sba_cleaning(paste("raw_data/sba/states/",file.names1[i], sep = ""))
+for(i in 1:length(file.names2)) {
+  file <- sba_cleaning(paste("raw_data/sba/states/",file.names2[i], sep = ""))
   all_states <- rbind(all_states, file)
 }
 
