--- a/7_descriptives.Rmd
+++ b/7_descriptives.Rmd
@@ -10,9 +10,10 @@ library(janitor)
 library(arsenal)
 library(readxl)
 
-loan_only <- readRDS('ppp_loanonly_all_loans.rds')
+#loan_only <- readRDS('ppp_loanonly_all_loans.rds')
 
-#most_recent <- readRDS('ppp_allvars_1024_unemploy.rds')
+most_recent <- ppp_allvars_1027_crime
+  #readRDS('ppp_allvars_1028.rds')
 ```
 
 ```{r}
@@ -30,6 +31,20 @@ most_recent %>%
             std = sd(days_to_approval),
             min = min(days_to_approval),
             max = max(days_to_approval))
+```
+
+
+```{r}
+ppp_150 <- read_csv("raw_data/sba/PPP_SBA_150.csv") %>%
+  clean_names() %>%
+  select(loan_range, zip, date_approved, lender, address, city, state,
+         jobs_reported) %>%
+  drop_na(zip, jobs_reported) %>%
+  
+  # This calculates the date on which loans were approved vs. when apps opened.
+  mutate(date_approved = mdy(date_approved), 
+         days_to_approval = date_approved - mdy("04/03/2020"),
+         zip = as.character(zip))
 ```
 
 
@@ -384,6 +399,59 @@ temp16 <- left_join(ppp_pop, crime_zip, by = "zip") %>%
   select(-total_crime)
   
 temp16 %>% summarize(n = n(), mean = mean(violent_crime_rate), sd = sd(violent_crime_rate))
+```
+
+
+```{r}
+ppp_150 <- read_csv("raw_data/sba/PPP_SBA_150.csv") %>%
+  clean_names() %>%
+  select(loan_range, zip, date_approved, lender, address, city, state,
+         jobs_reported) %>%
+  drop_na(zip, jobs_reported) %>%
+  
+  # This calculates the date on which loans were approved vs. when apps opened.
+  mutate(date_approved = mdy(date_approved), 
+         days_to_approval = date_approved - mdy("04/03/2020"),
+         zip = as.character(zip))
+
+ppp_150_newcol <- ppp_150 %>%
+  mutate(loan_amount = NA) %>%
+  mutate(loan_amount = as.character(loan_amount))
+
+sba_cleaning <- function(file) {
+  x <- read_csv(file) %>%
+    clean_names() %>%
+    select(loan_amount, zip, date_approved, lender, city, state,
+           jobs_reported) %>%
+    drop_na(zip, jobs_reported) %>%
+    mutate(date_approved = mdy(date_approved), 
+         days_to_approval = date_approved - mdy("04/03/2020"),
+         zip = as.character(zip))
+}
+
+# run for Mac
+file.names1 <- dir(path = "/Users/Regular/Desktop/GOV50/pppdata/raw_data/sba/states/", pattern = ".csv")
+
+# run for Windows
+file.names2 <- dir(path = "C:/Justin/Gov50/pppdata/raw_data/sba/states/", pattern = ".csv")
+
+all_states<- tibble()
+
+for(i in 1:length(file.names2)) {
+  file <- sba_cleaning(paste("raw_data/sba/states/",file.names2[i], sep = ""))
+  all_states <- rbind(all_states, file)
+}
+
+all_states2 <- all_states %>%
+  mutate(loan_range = "less than 150k", address = NA)
+
+ppp_total <- rbind(ppp_150_newcol, all_states2)
+
+ppp_total %>%
+  drop_na(jobs_reported) %>%
+  summarize(n = n(), mean = mean(jobs_reported), sd = sd(jobs_reported))
+
+
 ```
 
 
